...
            android:textSize="55sp"
            tools:ignore="RtlCompat" />

    </HorizontalScrollView>

    <!-- <EditText
        android:id="@+id/resultDisplay"
        style="@style/RobotoFontCondensedMedium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollHorizontally="true"
        android:clickable="false"
        android:cursorVisible="false"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="0">

                    <Button
                        android:id="@+id/squareButton"
                        android:contentDescription="@string/squareDesc"
                        style="@style/CalculatorButton.Function"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
...
                        android:layout_weight="1"
                        android:onClick="piButton"
                        android:text="@string/pi"
                        android:textSize="26sp" />

                    <ImageButton
                        android:id="@+id/exponentButton"
                        style="@style/CalculatorButton.Function"
                        android:contentDescription="@string/exponentDesc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
...
                        android:backgroundTint="?attr/button_symbol_color"
                        android:onClick="percent"
                        android:text="@string/percent"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/divideButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_symbol_color"
                        android:onClick="divideButton"
...
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/eight"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/nineButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/nine"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/multiplyButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_symbol_color"
                        android:onClick="multiplyButton"
...
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/four"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/fiveButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/five"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/sixButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/six"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/subtractButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_symbol_color"
                        android:onClick="subtractButton"
...
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/oneButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/one"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/twoButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/two"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/threeButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/three"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/addButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_symbol_color"
                        android:onClick="addButton"
...
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/zero"
                        android:textSize="28sp" />

                    <ImageButton
                        android:id="@+id/pointButton"
                        style="@style/CalculatorButton"
                        android:contentDescription="@string/pointDesc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="pointButton" />
...
